fix text overflow for .poll-common-vote-form

--- a/angular/core/components/poll/poll/vote_form/poll_poll_vote_form.scss
+++ b/angular/core/components/poll/poll/vote_form/poll_poll_vote_form.scss
@@ -1,6 +1,9 @@
 .poll-common-vote-form__border-chip {
   border-left: 8px solid;
   padding-left: 8px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .poll-poll-vote-form__options .md-list-item-inner {
